--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,9 @@ button {
 /* Title */
 
 .header {
-  color: #3a3f58;
+  /* color: #3a3f58; */
+  color: #5b85b7;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.85);
 }
 
 
@@ -202,10 +204,17 @@ button {
   color: #fff;
 }
 
+/* Same code as lose, but it will stay like that until project is reviewed */
+/* To avoid inconvenients because treehouse wants to see the win and lose classes added */
 .win {
   /* background-color: var(--color-win); */
   background: var(--backgorund);
   background-size: cover;
+}
+
+/* Added this and loseColor class, because #overlay's color property has more specificity than win/lose class */
+.winColor {
+  color: var(--color-win);
 }
 
 .win a {
@@ -218,30 +227,25 @@ button {
   background-size: cover;
 }
 
+.loseColor {
+  color: var(--color-lose);
+}
+
 .lose a {
   color: var(--color-lose);
 }
 
-/* ================================= 
-  Blink-caret effect
-==================================== */
-.blink-caret-effect {
-  margin: 0 auto;
-  border-right: .15em solid orange; /* The typwriter cursor */
-  letter-spacing: .15em; /* Adjust as needed */
-  animation: 
-    blink-caret .75s step-end infinite;
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: orange; }
+/* Game over message */
+.gameOverSize {
+  width: 400px;
+  margin: 10px auto;
 }
 
 /* ================================= 
   Button register style and effects
 ==================================== */
+/* Code taken from: https://codepen.io/rafaaro/pen/oNvJQyb */
+
 /* Common button styles */
 .button {
 	float: left;
@@ -416,6 +420,87 @@ button {
   display: none;
 }
 
+
+/* ================================= 
+  Animation
+==================================== */
+
+/* ==================
+  Blink-caret effect
+===================== */
+
+/* Code learned from: https://css-tricks.com/snippets/css/typewriter-effect/ */
+.blink-caret-effect {
+  margin: 0 auto;
+  border-right: .15em solid orange; /* The typwriter cursor */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    blink-caret .75s step-end infinite;
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
+/* thicker cursor */
 ul.blink-caret-effect {
   font-size: var(--font-size-large);
+}
+
+/* ==================
+  Reveal block effect
+===================== */
+/* Code learned from: https://codepen.io/pierrinho/pen/RgpVga */
+
+/* This class goes on the container element*/
+.reveal-holder {
+  position: relative;
+  overflow: hidden;
+}
+
+.reveal-block {
+  text-transform: uppercase;
+  animation: fadeIn 0s 0.6s;
+  animation-fill-mode: backwards;
+}
+
+.reveal-block::after {
+  position: absolute;
+  content: '';
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #f0f2f6;
+  transform: translateX(-100%);
+  animation: secondaryImageOverlayIn 0.6s 0s, secondaryImageOverlayOut 0.6s 0.6s;
+  animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes secondaryImageOverlayIn {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes secondaryImageOverlayOut {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100%);
+  }
 }
